public/styles/style.css
/* ... */
.amplication-base .stretched-link::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  pointer-events: auto;
  content: '';
  background-color: rgba(0, 0, 0, 0);
}
.amplication-base .text-monospace {
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
    'Courier New', monospace !important;
}
.amplication-base .text-justify {
  text-align: justify !important;
}
.amplication-base .text-wrap {
  white-space: normal !important;
}
.amplication-base .text-nowrap {
  white-space: nowrap !important;
}
.amplication-base .text-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.amplication-base .text-left {
  text-align: left;
}
.amplication-base .text-right {
  text-align: right !important;
}
.amplication-base .text-center {
  text-align: center !important;
}
@media (min-width: 576px) {
  .amplication-base .text-sm-left {
    text-align: left !important;
  }
  .amplication-base .text-sm-right {
    text-align: right !important;
  }
  .amplication-base .text-sm-center {
    text-align: center !important;
  }
}
@media (min-width: 768px) {
  .amplication-base .text-md-left {
    text-align: left !important;
  }
  .amplication-base .text-md-right {
    text-align: right !important;
  }
  .amplication-base .text-md-center {
    text-align: center !important;
  }
}
@media (min-width: 992px) {
  .amplication-base .text-lg-left {
    text-align: left !important;
  }
  .amplication-base .text-lg-right {
    text-align: right !important;
  }
  .amplication-base .text-lg-center {
    text-align: center !important;
  }
}
@media (min-width: 1200px) {
  .amplication-base .text-xl-left {
    text-align: left !important;
  }
  .amplication-base .text-xl-right {
    text-align: right !important;
  }
  .amplication-base .text-xl-center {
    text-align: center !important;
  }
}
.amplication-base .text-lowercase {
  text-transform: lowercase !important;
}
.amplication-base .text-uppercase {
  text-transform: uppercase !important;
}
.amplication-base .text-capitalize {
  text-transform: capitalize !important;
}
.amplication-base .font-weight-light {
  font-weight: 300 !important;
}
.amplication-base .font-weight-lighter {
  font-weight: lighter !important;
}
.amplication-base .font-weight-normal {
  font-weight: 400 !important;
}
.amplication-base .font-weight-bold {
  font-weight: 700 !important;
}
.amplication-base .font-weight-bolder {
  font-weight: bolder !important;
}
.amplication-base .font-italic {
  font-style: italic !important;
}
.amplication-base .text-white {
  color: var(--white) !important;
}
.amplication-base .text-primary {
  color: var(--primary) !important;
}
.amplication-base a.text-primary:hover,
.amplication-base a.text-primary:focus {
  color: var(--hover) !important;
}
.amplication-base .text-secondary {
  color: var(--secondary) !important;
}
.amplication-base a.text-secondary:hover,
.amplication-base a.text-secondary:focus {
  color: #8e8ea4 !important;
}
.amplication-base .text-success {
  color: #31c587 !important;
}
.amplication-base a.text-success:hover,
.amplication-base a.text-success:focus {
  color: #22885d !important;
}
.amplication-base .text-info {
  color: var(--info) !important;
}
.amplication-base a.text-info:hover,
.amplication-base a.text-info:focus {
  color: #0a7abc !important;
}
.amplication-base .text-warning {
  color: #f6aa50 !important;
}
.amplication-base a.text-warning:hover,
.amplication-base a.text-warning:focus {
  color: #ed860c !important;
}
.amplication-base .text-danger {
  color: var(--danger) !important;
}
.amplication-base a.text-danger:hover,
.amplication-base a.text-danger:focus {
  color: #c3162b !important;
}
.amplication-base .text-light {
  color: var(--light) !important;
}
.amplication-base a.text-light:hover,
.amplication-base a.text-light:focus {
  color: #c8c8d7 !important;
}
.amplication-base .text-dark {
  color: var(--dark) !important;
}
.amplication-base a.text-dark:hover,
.amplication-base a.text-dark:focus {
  color: black !important;
}
.amplication-base .text-body {
  color: var(--dark) !important;
}
.amplication-base .text-muted {
  color: #6c757d !important;
}
.amplication-base .text-black-50 {
  color: rgba(0, 0, 0, 0.5) !important;
}
.amplication-base .text-white-50 {
  color: rgba(255, 255, 255, 0.5) !important;
}
.amplication-base .text-hide {
  font-size: 0;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}
.amplication-base .text-decoration-none {
  text-decoration: none !important;
}
.amplication-base .text-break {
  word-break: break-word !important;
  overflow-wrap: break-word !important;
}
.amplication-base .text-reset {
  color: inherit !important;
}
.amplication-base .visible {
  visibility: visible !important;
}
.amplication-base .invisible {
  visibility: hidden !important;
}
/* ... */

